# Interoperability_DeepDive

./: LICENSE  README.md  pyproject.toml
data/: doi_joined.json  merged_records.csv  term_records.csv
data/resources/: APD.csv  ARIADNE.csv  BIEN.csv  BioTIME.csv  BugsCEP.csv  CARD.csv  CHELSA.csv  EPD.csv  EUROEVOL.csv  EVA.csv  FAUNMAP.csv  FishBase.csv  FuTRES.csv  GBIF.csv  GNIP.csv  Global Paleofire Database.csv  LAPD.csv  MARBEN.csv  MARSPEC.csv  Macrostrat.csv  Mexican Mammal Database.csv  Missouri Phytolith Database.csv  NAKALA.csv  NAPD.csv  NEON.csv  NOAA Paleoclimatology Database.csv  NODB.csv  NODE.csv  NPP-ID.csv  Neotoma.csv  OBIS.csv  OpenContext.csv  PALY-CZ.csv  PRISM.csv  Paleobiology Database.csv  Phyt-Core.csv  PlioMIP.csv  SEAD.csv  SISAL.csv  Silva.csv  (+8 more)
src/: interop_agg.py  interop_dd.py  networkgraph.py  sed_cleaning.sh
src/interoperability_deepdive/: __init__.py  gddURLcall.py  gdd_snippets.py  process_hits.py
