[project]
name = "interoperability-deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Simon", email = "simon.j.goring@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
interoperability-deepdive = "interoperability_deepdive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
